tree-sitter-reify/grammar.js
    source_file: $ => seq(optional($.module_declaration), repeat($._declaration)),

    // `module company.products.actuators`
    // Placed ONLY here (not in _declaration) so that a module decl after any
    // other declaration is a natural parse ERROR — the grammar enforces the
    // top-of-file / one-per-file rule (PRD D-5, §7.2) with no extra code.
    module_declaration: $ => seq('module', field('path', $.import_path)),

    _declaration: $ => choice(
      $.structure_definition,
      $.occurrence_definition,
      $.import_declaration,
      $.enum_declaration,
      $.function_definition,
      $.trait_declaration,
      $.field_definition,
      $.purpose_declaration,
      $.constraint_definition,
      $.unit_declaration,
      $.type_alias_declaration,
      $.default_declaration,
      $.joint_definition,
      $.pragma,
      $.annotation,
    ),

    // ── Enum ──────────────────────────────────────────────────
    enum_declaration: $ => seq(
      optional('pub'),
      'enum',
      field('name', $.identifier),
      optional($.type_parameters),
      '{',
      commaSep($.enum_variant),
      '}',
    ),

    // A single variant in an enum body: either a bare name (`Point`) or a
    // named-field form (`Circle { radius: Length }`).
    // PRD §4.4 / task α (data-carrying-enums).
    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(seq(
        '{',
        $.variant_field_decl,
        repeat(seq(',', $.variant_field_decl)),
        optional(','),
        '}',
      )),
    ),

    // A single `field: Type` pair inside an enum_variant payload.
    // PRD §4.4 / task α.
    fn_param_list: $ => choice(
      // Self-led: `self` receiver with optional following typed params.
      // Downstream uses child_by_field_name("receiver") to detect the receiver.
      seq(
        field('receiver', 'self'),
        optional(seq(',', $.fn_param, repeat(seq(',', $.fn_param)), optional(','))),
      ),
      // Typed params only (existing behaviour — no self receiver).
      seq(
        $.fn_param,
        repeat(seq(',', $.fn_param)),
        optional(','),
      ),
    ),

    fn_param: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $.type_expr),
      optional(seq('=', field('default', $._expression))),
    ),

    import_path: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
    ),

    // Destructured import items: `{Bolt, Nut}`
    trait_bound_list: $ => seq(
      $.trait_bound_entry,
      repeat(seq('+', $.trait_bound_entry)),
    ),

    trait_bound_entry: $ => seq(
      field('name', $.identifier),
      optional(field('type_args', seq('<', $.type_arg_list, '>'))),
    ),

    // ── Type parameters ─────────────────────────────────────
    structure_definition: $ => seq(
      optional('pub'),
      'structure',
      optional('def'),
      field('name', $.identifier),
      optional($.type_parameters),
      optional(seq(':', $.trait_bound_list)),
      '{',
      repeat($._member),
      '}',
    ),

    // ── Occurrence ────────────────────────────────────────────
    occurrence_definition: $ => seq(
      optional('pub'),
      'occurrence',
      optional('def'),
      field('name', $.identifier),
      optional($.type_parameters),
      optional(seq(':', $.trait_bound_list)),
      '{',
      repeat($._member),
      '}',
    ),

    _member: $ => choice(
      // Shared alternatives: see commonMembers() above.
      ...commonMembers($),
      // Associated-type binding in structure/occurrence bodies (task 3971 ιₐ).
      // Mirrors the existing `$.associated_type` arm in `trait_member`; admits
      // `type X = Concrete` inside structure/occurrence bodies so conformers can
      // satisfy trait associated-type requirements.
      // NOTE: `_guard_member` intentionally excludes this via commonMembers().
      $.associated_type,
      // Override fn body in structure/occurrence bodies (task 4752).
      // Admits `fn name(self) -> T { … }` so a conformer can override a trait's
      // default-providing associated fn (FORK-D override semantics, PRD §7.2).
      // Only `function_definition` (with body) is admitted — NOT `function_signature`
      // (bodyless), because a conformer override MUST supply a body.
      // Added to `_member` only (not `commonMembers()`), so `_guard_member`
      // (guarded `where{…}` blocks) does not admit override fns — same scoping
      // decision as the `$.associated_type` arm above.
      $.function_definition,
    ),

    // ── Meta block ──────────────────────────────────────────
    where_clause: $ => seq(
      'where',
      field('condition', $._expression),
    ),

    // ── Guarded block ─────────────────────────────────────
    //
    // Guarded blocks use `_guard_member` (not `_member`) so that
    // `associated_type` bindings (`type X = Concrete`) are NOT admitted
    // inside `where cond { ... }` blocks — they are only valid at structure/
    // occurrence body level.  This mirrors the intent of the test
    // `associated_type_in_block_guard_rejected_by_parser`.
    param_declaration: $ => seq(
      optional('priv'),
      'param',
      field('name', $.identifier),
      optional(seq(':', field('type', $.type_expr))),
      optional(seq('=', field('default', $._binding_value))),
      optional(field('guard', $.where_clause)),
    ),

    // ── Auto keyword (for solver-determined params) ───────
    // Accepts bare `auto`, `auto(free)`, or the parameterized
    // `auto(name = value, …)` form (geometric-relations δ, task 4384).
    // The presence of the `modifier` field child indicates the `free` modifier;
    // an `auto_param_list` child carries the `seed`/component-fix params.
    //
    // Precedence ordering (highest first) resolves the shift-reduce conflict
    // that arises when `(` immediately follows `auto`:
    //   - `auto(free)` (prec 2): `free` is an anonymous string token, so by
    //     tree-sitter's string-vs-regex tie-break it wins over `identifier` on
    //     the text "free"; the higher prec keeps this arm preferred.
    //   - `auto(name = value, …)` (prec 1): any other `(`-arm; `name` lexes as
    //     `identifier` and the required `=` distinguishes it from `auto(free)`.
    //   - bare `auto` (prec 0).
    //
    // δ only PRESERVES the seed/component-fix params in the CST; consuming them
    // (root selection, partial-fix) is ζ's relate-solve.
    //
    // Uses $._auto_token (external scanner token) instead of the string
    // literal 'auto' so that the lexer-level reservation via the external
    // scanner is enforced.  _auto_token is leading-underscore hidden so the
    // CST shape remains (auto_keyword) / (auto_keyword (modifier)) — no
    // (auto_keyword (auto_token)) wrapper node.
    let_declaration: $ => seq(
      optional(choice('pub', 'priv')),
      optional('aux'),
      'let',
      field('name', $.identifier),
      optional(seq(':', field('type', $.type_expr))),
      '=',
      field('value', $._binding_value),
      optional(field('guard', $.where_clause)),
    ),

    // ── Constraint ──────────────────────────────────────────
    // Note: optional label support deferred — M1 constraints have no labels.
    // Label syntax would need disambiguation (e.g., `constraint "label" expr`).
    constraint_declaration: $ => seq(
      optional('priv'),
      'constraint',
      field('expr', $._expression),
      optional(field('guard', $.where_clause)),
    ),

    // ── Minimize ───────────────────────────────────────────
    minimize_declaration: $ => seq(
      'minimize',
      field('expr', $._expression),
      optional(field('guard', $.where_clause)),
    ),

    // ── Maximize ──────────────────────────────────────────
    maximize_declaration: $ => seq(
      'maximize',
      field('expr', $._expression),
      optional(field('guard', $.where_clause)),
    ),

    // ── Relate block (member-level) ─────────────────────────
    // `relate { concentric(a, b)  flush(c, d) }` — a member-level block of
    // geometric DRIVE relations (geometric-relations v0_6, PRD §1/§4/§7.3;
    // design §4/§5; task δ 4384).  Each body member is a bare relation
    // expression; the Relation-vs-Bool routing is enforced at type-check time
    // (E_RELATE_EXPECTS_RELATION, step-14) — the block is the routing signal,
    // not a name heuristic.
    //
    // `relate` is a PLAIN string token (contextual keyword), mirroring the
    // proven `default`/`undef`/`unit`/`type` pattern: tree-sitter makes it a lex
    // candidate ONLY where the parse state admits it (member-start positions via
    // commonMembers()).  No member alternative begins with a bare identifier, so
    // `'relate'` and `identifier` are never both valid at one state — everywhere
    // else (operands, names, args) `relate` keeps lexing as `identifier`.
    //
    // Body shape mirrors constraint_def_predicate (repeat of bare expressions):
    // GLR separates newline- and `;`-separated members with no explicit
    // separator token.  Empty `relate { }` is admitted (repeat = zero-or-more).
    relation_member: $ => field('expr', $._expression),

    // ── Inline sub relate-block (`at … where { }`) ──────────
    // The trailing inline form on a sub placement: `sub … at <pose> where {
    // concentric(…)  flush(…) }` (geometric-relations v0_6, design §4/§5; task
    // δ 4384).  Distinct from the sub's `where <expr>` guard (a where_clause,
    // positionally BEFORE `at`) and from a member-level `where <expr> { }`
    // guarded_block: a sub_relate_block has NO condition expression between
    // `where` and `{`.  Because guarded_block REQUIRES a condition, a
    // conditionless `where {` after a pose can ONLY be a sub_relate_block — the
    // GLR keeps the error-free parse.  Body reuses relation_member (step-6).
    joint_definition: $ => seq(
      optional('pub'),
      'joint',
      field('name', $.identifier),
      optional($.type_parameters),
      '(',
      optional($.fn_param_list),
      ')',
      'with',
      field('dof', $.joint_dof),
      '=',
      field('body', $.joint_body),
    ),

    // The DOF specification following `with`.
    // Single form: `with angle: Angle in 0deg..120deg` — bare joint_dof_field.
    // Record form: `with { angle: Angle, travel: Length }` — braced, comma-separated.
    // The braced arm mirrors enum_variant's named-field payload grammar.
    joint_dof: $ => choice(
      $.joint_dof_field,
      seq('{', $.joint_dof_field, repeat(seq(',', $.joint_dof_field)), optional(','), '}'),
    ),

    // A single DOF field: `name: TypeExpr` with an optional `in <range>` clause.
    // `'in'` is a contextual keyword here — valid only at this parse position.
    joint_dof_field: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $.type_expr),
      optional(seq('in', field('range', $._expression))),
    ),

    // The body of a joint definition, introduced by `=` in joint_definition.
    // Block form: `{ relation_member* }` — reuses δ's relation_member node so
    // each body expression lowers via lower_relation_members (same as relate_block).
    // Single-expr form: `result: _expression` — a single relation expression.
    // `{` unambiguously selects the block arm (no _expression starts with bare `{`).
    joint_body: $ => choice(
      seq('{', repeat($.relation_member), '}'),
      field('result', $._expression),
    ),

    // ── Sub ─────────────────────────────────────────────────
    type_expr: $ => choice(
      $.function_type,
      $.parameterized_type,
      $.qualified_type,
      $.identifier,
    ),

    // Arrow / function type: `(T) -> U`, `(A, B) -> C`, `() -> U` (task 4595).
    // The leading `(` is unique among the type forms (parameterized=`Name<`,
    // qualified=`Name::`, bare=identifier), so this production is unambiguous
    // and needs no precedence hacks.  Param types are positional `type_expr`
    // children; the return is the only named field (`return_type`), mirroring
    // qualified_type's base/member field discipline so the lowering pass can
    // distinguish the return from the params via child_by_field_name.  The
    // existing `commaSep` helper (grammar.js:8) cleanly supports 0+ params.
    _binding_value: $ => choice(
      $.auto_keyword,
      $._expression,
    ),

    // ── Expressions ─────────────────────────────────────────
    // Precedence (low → high):
    //  -15: implies (keyword, right-assoc) — loosest in language
    //  -14: or  (keyword, left-assoc)
    //  -13: and (keyword, left-assoc)
    //  -12: not (keyword, unary prefix)   ─╮ keyword logical-operator band
    //         NOTE: tree-sitter prec is higher=tighter, the INVERSE of spec §16's
    //         "1 (highest) … 15 (lowest)" numbering. Spec levels 12–15 are negated
    //         here so the ordering not(−12) > and(−13) > or(−14) > implies(−15)
    //         matches the spec exactly. The whole band sits below range(0) and the
    //         symbol forms (||=1, &&=2), making keyword ops the outermost layer.
    //         Keyword `not`(−12) is intentionally LOOSER than symbol `!`(7) per
    //         spec §16: `not a == b` → not(a==b), `!a == b` → (!a)==b.
    //   0: range (.., ..<, single-sided)
    //   1: || (or)
    //   2: && (and)
    //   3: ==, != (equality)
    //   4: <, >, <=, >= (comparison)
    //   5: +, - (additive)
    //   6: *, /, % (multiplicative)
    //   7: unary -, ! (unary)
    //   8: ^ exponentiation (right-assoc)
    //   9: postfix index access ([]), qualified access (::)
    //  10: postfix ad-hoc selector (@)
    //  11: postfix member access (.), function call

    _expression: $ => choice(
      $.range_expression,
      $.binary_expression,
      $.unary_expression,
      $.conditional_expression,
      $.match_expression,
      $.lambda_expression,
      $.quantifier_expression,
      $.ad_hoc_selector,
      $.index_access,
      $.trait_method_call,
      $.qualified_access,
      $.instance_qualified_access,
      $._primary_expression,
    ),

    // ── Lambda expression ─────────────────────────────────
    // |params| body — body extends as far right as possible (lowest precedence)
    match_expression: $ => prec.right(0, seq(
      'match',
      field('discriminant', $._expression),
      '{',
      seq($.match_arm, repeat(seq(',', $.match_arm)), optional(',')),
      '}',
    )),

    match_arm: $ => seq(
      field('pattern', $.match_pattern),
      '=>',
      field('body', $._expression),
    ),

    match_pattern: $ => choice(
      $.variant_binding_pattern,
      seq($.identifier, repeat(seq('|', $.identifier))),
      '_',
    ),

    // Named-field payload-binding pattern: `Circle { radius: r }` or
    // `Rect { width: w, height: h }`.  The variant name is followed by a
    // brace-delimited, comma-separated list of field_binding entries.
    // A trailing comma is permitted (optional(',')).
    // PRD §4.4 / task β (data-carrying-enums).
    variant_binding_pattern: $ => seq(
      field('variant', $.identifier),
      '{',
      $.field_binding,
      repeat(seq(',', $.field_binding)),
      optional(','),
      '}',
    ),

    // A single `field: binder` pair inside a variant_binding_pattern.
    field_binding: $ => seq(
      field('field', $.identifier),
      ':',
      field('binder', $.identifier),
    ),

    // ── Decl-level match block (B2, tasks 3563 + 3564) ──────────────────────
    // `match <discriminant> { Pattern => sub head : StructName, ... }` reachable
    // from `_member`. Parallel to `match_expression` (grammar.js above) but the
    // arm body is a declaration (sub form), not an expression. Lowering to
    // `MemberDecl::MatchArmDeclGroup` is wired via `lower_match_arm_decl_group`
    // in `crates/reify-syntax/src/ts_parser.rs` (task 3564).
    function_call: $ => prec(11, seq(
      field('name', $.identifier),
      callTail($),
    )),
