tree-sitter-reify/test/corpus/modulo.txt
================================================================================
modulo: basic production (a % b)
================================================================================

structure S {
  let r = a % b
}

--------------------------------------------------------------------------------

(source_file
  (structure_definition
    name: (identifier)
    (let_declaration
      name: (identifier)
      value: (binary_expression
        left: (identifier)
        right: (identifier)))))

================================================================================
modulo: left-associativity (a % b % c)
================================================================================

structure S {
  let r = a % b % c
}

--------------------------------------------------------------------------------

(source_file
  (structure_definition
    name: (identifier)
    (let_declaration
      name: (identifier)
      value: (binary_expression
        left: (binary_expression
          left: (identifier)
          right: (identifier))
        right: (identifier)))))

================================================================================
modulo: same-band left-grouped with multiply (a % b * c)
================================================================================

structure S {
  let r = a % b * c
}

--------------------------------------------------------------------------------

(source_file
  (structure_definition
    name: (identifier)
    (let_declaration
      name: (identifier)
      value: (binary_expression
        left: (binary_expression
          left: (identifier)
          right: (identifier))
        right: (identifier)))))

================================================================================
modulo: same-band left-grouped with multiply reversed (a * b % c)
================================================================================

structure S {
  let r = a * b % c
}

--------------------------------------------------------------------------------

(source_file
  (structure_definition
    name: (identifier)
    (let_declaration
      name: (identifier)
      value: (binary_expression
        left: (binary_expression
          left: (identifier)
          right: (identifier))
        right: (identifier)))))

================================================================================
modulo: higher precedence than addition (a + b % c)
================================================================================

structure S {
  let r = a + b % c
}

--------------------------------------------------------------------------------

(source_file
  (structure_definition
    name: (identifier)
    (let_declaration
      name: (identifier)
      value: (binary_expression
        left: (identifier)
        right: (binary_expression
          left: (identifier)
          right: (identifier))))))

================================================================================
modulo: higher precedence than addition reversed (a % b + c)
================================================================================

structure S {
  let r = a % b + c
}

--------------------------------------------------------------------------------

(source_file
  (structure_definition
    name: (identifier)
    (let_declaration
      name: (identifier)
      value: (binary_expression
        left: (binary_expression
          left: (identifier)
          right: (identifier))
        right: (identifier)))))
